2012-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_comm_session.c, perl/Amanda/Util.swg: Use inet_ntop
	  instead of inet_ntoa.

2012-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove MAX_DUMPERS.
	* common-src/conffile.c (validate_inparallel): Remov function.
	* example/amanda.conf.in: Remove comment for MAX_DUMPERS.
	* server-src/driverio.c: Allocation dynamic table for dmptable and
	  chktable.
	* server-src/driverio.h (init_driverio): New prototype.
	* server-src/driver.c: Use new init_driverio.

2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl (showtime): Use calandar days.

2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Always set CURLOPT_CAINFO.

2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Add data_path to %splitting_args.
	* perl/Amanda/Taper/Scribe.pm: Correctly set part_* for DIRECTTCP
	  data_path.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Add a timeout.
	* common-src/event.c: List all event in debug mode.
	* common-src/security-util.c: Call the accept_fn on connection close.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Add '-z 0' to gpg argument when
	  encrypting.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, device-src/ndmp-device.c,
	  server-src/dumper.c, xfer-src/xfer-test.c: Fix bug found by Coverity.

2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/amrecover.c: Solaris do not have sa_restorer.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, amar-src/amarchiver.c,
	  client-src/selfcheck.c, common-src/bsd-security.c,